k8s/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: garden
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: docker.io/almoskov/inventory-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: inventory-db
              mountPath: /app/data
      volumes:
        - name: inventory-db
          persistentVolumeClaim:
            claimName: inventory-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: garden
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
