k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: garden
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: docker.io/almoskov/product-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: product-db
              mountPath: /app/data
      volumes:
        - name: product-db
          persistentVolumeClaim:
            claimName: product-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: garden
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
