k8s/product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: garden
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: product.garden.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3001
